--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Redirecting...</title>
       <script>
-          window.location.href = "https://s.id/dppangelajhs";
+          window.location.href = "https://dppangelajhs.github.io";
       </script>
   </head>
   <body>
